[package]
name = "ch02"
version = "0.1.0"
edition = "2024"

[dependencies]
burn = { version = "0.18.0", features = ["dataset", "ndarray"] }
burn-ndarray = "0.18.0"
# We'll handle tensors manually without Burn for now
clap = { version = "4.5", features = ["derive"] }
colored = "2.1"
futures-util = "0.3"
indicatif = "0.17"
regex = "1.10"
reqwest = { version = "0.12.22", features = ["stream"] }
tiktoken-rs = "0.7.0"
tokio = { version = "1.47.1", features = ["full"] }
